[gd_scene load_steps=2 format=3 uid="uid://c442u2xqfceb3"]

[ext_resource type="Script" uid="uid://7pmhhrlvqlkw" path="res://Stages/UI/hud.gd" id="1_kq62n"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_kq62n")

[node name="FuelBar" type="ProgressBar" parent="."]
offset_left = 199.0
offset_top = 9.0
offset_right = 479.0
offset_bottom = 36.0
size_flags_horizontal = 0
size_flags_vertical = 1
max_value = 1000.0
value = 1000.0

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 585.0
offset_top = 11.0
offset_right = 631.0
offset_bottom = 34.0
text = "00000"

[node name="DisplayText" type="Label" parent="."]
offset_left = 143.0
offset_top = 44.0
offset_right = 532.0
offset_bottom = 67.0
text = "Default Display Text"
horizontal_alignment = 1
